# meridian

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CREDENTIALS_SETUP.md  PLAN_ZOOM_GMAIL_CONNECTOR.md  README.md  index.html  meridian_claude_code_prompt.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/meridian-daemon/: Cargo.toml
src-tauri/meridian-daemon/src/: ipc.rs  jobs.rs  main.rs  scheduler.rs
src-tauri/meridian-mcp/: Cargo.toml
src-tauri/meridian-mcp/src/: handlers.rs  main.rs  protocol.rs
src-tauri/resources/builtin-skills/: templates.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: chunking.rs  embeddings.rs  extractor.rs  litellm.rs  mod.rs  ollama.rs  prompts.rs  search.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: ai.rs  audit.rs  connections.rs  daemon.rs  documents.rs  drafts.rs  embedding_worker.rs  encryption.rs  export.rs  import.rs  integrations.rs  meetings.rs  migration.rs  mod.rs  notifications.rs  patterns.rs  plans.rs  projects.rs  scheduler.rs  settings.rs  skills.rs  suggestions.rs  tasks.rs  updater.rs
src-tauri/src/connectors/: gmail.rs  mod.rs  sheets_relay.rs  sync.rs  zoom.rs
src-tauri/src/crypto/: key.rs  mod.rs
src-tauri/src/daemon/: jobs.rs  mod.rs  worker.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/migrations/: mod.rs  v001_initial.rs  v002_fts.rs  v003_embeddings.rs  v004_task_priority.rs  v005_connectors.rs  v006_archive.rs  v007_audit_log.rs  v008_daemon_jobs.rs  v009_pattern_learning.rs  (+5 more)
src-tauri/src/drafts/: models.rs  repository.rs
src-tauri/src/integrations/: framework.rs  github.rs  jira.rs  mod.rs  models.rs  repository.rs  slack.rs  slack_socket.rs  webhook.rs
src-tauri/src/models/: ai_settings.rs  analytics.rs  connection.rs  document.rs  meeting.rs  mod.rs  project.rs  task.rs
src-tauri/src/patterns/: models.rs  repository.rs
src-tauri/src/plans/: evaluation.rs  mod.rs  models.rs
src-tauri/src/sensitive/: mod.rs
src-tauri/src/skills/: approval.rs  builtin.rs  cron.rs  dispatcher.rs  events.rs  executor.rs  folders.rs  mod.rs  models.rs  repository.rs
src-tauri/src/suggestions/: models.rs  repository.rs
src-tauri/src/utils/: backup.rs  file_parser.rs  health_score.rs  mod.rs
src-tauri/src/vectors/: mod.rs  qdrant.rs
(+271 files in other folders)
