[package]
name = "meridian-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for Meridian scheduled jobs"

[[bin]]
name = "meridian-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs-next = "2"
thiserror = "1"

# Unix socket IPC (cross-platform)
interprocess = { version = "2", features = ["tokio"] }
uuid = { version = "1", features = ["v4"] }
