[package]
name = "meridian-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Meridian — exposes data to AI agents"

[[bin]]
name = "meridian-mcp"
path = "src/main.rs"

[dependencies]
# Use the main meridian lib for DB access and models
meridian_lib = { path = "..", package = "meridian" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
